objects/vlocity_ins__GraphCloneSpecial__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>vlocity_ins__ChildObject__c</fullName>
        <description>Child object(s) being cloned.</description>
        <label>Child Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClassName__c</fullName>
        <description>Class to call for the special logic.</description>
        <label>Class Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Order__c</fullName>
        <description>Sequence of operation if there are multiple special pieces of code to run for the same Root / Child combination.</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RootObject__c</fullName>
        <description>The parent object type that is being cloned</description>
        <label>Root Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Graph Clone Special</label>
</CustomObject>